270		C++			Set some starting CON (from serfdom/free-subj, culture, religion) and MIL (from stability, culture, religion) for pops.  Eventually need other factors (decisions, tolerance, buildings, modifiers) incorporated.
271		C++			Allow Mantua to map to Lombardia.
272		C++			Fix Yap Islands/Micronesia Sea mappings.
273		N/A			Clean up some stray files
274		ProvinceMapper		Introduce Province Mapper tool
275		ProvinceMapper		Handle new mappings files a bit better
276		ProvinceMapper		Make release builds work
277		C++			Add remaining sea and ocean mappings.
278		C++			Parse country data with the parser instead of ad-hoc. Add a missing linebreak to output.
279		C++			Literacy
280		C++			Initialize variable in log.cpp
281		C++			No longer log country mappings twice.
282		C++			Major update to DW province mappings.
283		C++			Code to handle null province mappings.
284		C++			Major update to HttT province mappings. Minor adjustments to DW mappings.
285		C++			Fixed an old bug with dead landless nations (some were just mostly dead, not all dead).
286		C++			Now remove enough older landless nations.
287		C++			Read certain settings (V2 directory, game type, etc) from configuration.txt
288		C++			Refactor reading of localized province names.
289		C++			Administrative republics convert to democracies, not monarchies.
290		C++			Write all countries to the file, even if they don't exist yet. Fixes releasing cultural unions, etc.
291		C++			A little output cleanup.
292		N/A			readme updated and expanded
					ADAGE mod goverment mappings added for posterity
293		N/A			Readme updated
294		N/A			Build and test changes for configuration file.
295		C++			Updates to literacy calculations.
296		C++			Update build config for only one output version.
297		C++			Removed some normally hidden compiler warnings.
298		C++			Updated tech conversion
299		C++			All cultures from EU3 cultural unions now accepted.
300		C++			Further tech updates.